<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iot.yscamera.YsCaptureActivity">
    <!-- 整体透明画布 -->


    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#fff"/>

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_gravity="top"
            android:background="#fff">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/scan_code"
                android:textColor="#3e3e3e"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/top_btn"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/add_cateye_hand"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                tools:text="文字"/>

        </RelativeLayout>


        <!-- 扫描取景框 -->
        <com.example.smarthome.iot.yscamera.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_gravity="bottom"
            android:background="#99000000"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/flashLightLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/flashLightIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_close"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/flashLightTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/open_flash"
                    android:textColor="#ffffff" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/albumLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/albumIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:tint="#ffffffff"
                    app:srcCompat="@drawable/ic_photo"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/gallery"

                    android:textColor="#ffffff" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>