<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iot.dveview.CustomSwitchActivity">

    <include
        android:id="@+id/single_bit_switch_top"
        layout="@layout/top_layout" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_bit_switch_top"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/smart_socket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"
            android:src="@drawable/custom_switch" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/drawable_black"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_22"
            android:layout_marginBottom="@dimen/dp_22"
            android:text="@string/switch_1"
            android:textColor="@color/black20" />

        <ImageView
            android:id="@+id/custom_socket_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_33"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/air_conditioner_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/drawable_black"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dev_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_22"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/switch_2"
                android:textColor="@color/black20" />

            <TextView
                android:id="@+id/custom_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_22"
                android:text="@string/switch_custom"
                android:textColor="@color/color_0074ff"
                android:textSize="@dimen/dp_8"
                tools:ignore="SpUsage" />
        </LinearLayout>


        <ImageView
            android:id="@+id/custom_socket_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_33"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/air_conditioner_image"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="10dp"
        android:background="@drawable/drawable_black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dev_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:text="@string/socket_switch"
                android:textColor="@color/black20" />


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="@dimen/album_dp_80"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_toStartOf="@+id/custom_tv2"
                android:textColor="#3E3E3E"
                android:textSize="@dimen/dp_8"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/custom_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:text="@string/switch_custom"
                android:textColor="@color/color_0074ff" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            android:background="#D5D5D5" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/custom_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49920508" />


</android.support.constraint.ConstraintLayout>